# snowflake-streamlit-app-cc

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.hyphenated}}/: .gitignore  README.md  app.py  environment.yml  pyproject.toml  snowflake.yml
{{cookiecutter.hyphenated}}/.streamlit/: secrets-example.toml
{{cookiecutter.hyphenated}}/utils/: data.py  helpers.py
